--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -60,9 +60,14 @@ body {
   border-top-right-radius: 6px;
 }
 
-.p-dialog .p-dialog-header {
+/* .p-datepicker table td {
+  padding: 0.1rem !important;
+} */
+
+/* .p-dialog .p-dialog-header {
   border-bottom: 0 none;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 1);
+  background: var(--surface-overlay);
   box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -70,10 +75,11 @@ body {
   padding: 1.25rem;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
-}
+} */
 
 .p-dialog .p-dialog-content {
-  background: rgba(0, 0, 0, 0.9);
+  /* background: rgba(0, 0, 0, 1); */
+  background: var(--surface-overlay);
   box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -81,6 +87,15 @@ body {
   padding: 0 1.25rem 1.25rem 1.25rem;
 }
 
+.p-datatable .p-datatable-tbody > tr > td {
+  text-align: center;
+  padding: 0.5rem 0.5rem;
+}
+
+.p-datatable .p-datatable-thead > tr > th {
+  text-align: center;
+  padding: 1rem 0.5rem;
+}
 .user-img-shake {
   animation: shake 1s;
 }
