--- a/client/project/src/app/component/add-transaction/add-transaction.component.html
+++ b/client/project/src/app/component/add-transaction/add-transaction.component.html
@@ -46,9 +46,35 @@
             placeholder="Select a Category"
             [style]="{ width: '100%' }"
             formControlName="categoryName"
-          ></p-dropdown>
+            [(ngModel)]="selectedCategory"
+          >
+            <ng-template pTemplate="selectedItem">
+              <div
+                class="flex align-items-center gap-2"
+                *ngIf="selectedCategory"
+              >
+                <div class="d-flex align-items-center gap-2">
+                  <p-tag
+                    [value]="getSelectedCategoryType() | uppercase"
+                    [severity]="getSeverityType()"
+                  >
+                  </p-tag>
+                  <div>{{ selectedCategory }}</div>
+                </div>
+              </div>
+            </ng-template>
+            <ng-template let-category pTemplate="item">
+              <div class="d-flex align-items-center gap-2">
+                <p-tag
+                  [value]="category.object.type | uppercase"
+                  [severity]="getSeverity(category.object.type)"
+                ></p-tag>
+                <div>{{ category.object.categoryName }}</div>
+              </div>
+            </ng-template>
+          </p-dropdown>
         </div>
-        <div class="d-flex flex-column m-4">
+        <!-- <div class="d-flex flex-column m-4">
           <label htmlFor="categoryName">Type of Transaction</label>
           <p-dropdown
             inputId="type"
@@ -69,7 +95,7 @@
               ></p-tag>
             </ng-template>
           </p-dropdown>
-        </div>
+        </div> -->
         <div class="d-flex flex-column m-4">
           <label for="remarks">Remarks</label>
           <textarea
@@ -77,7 +103,7 @@
             pInputTextarea
             required
             [autoResize]="true"
-            rows="3"
+            rows="8"
             formControlName="remarks"
             [style]="{ width: '100%' }"
           ></textarea>
