complete barchart and doughnut chart, get trans based on year

--- a/client/project/src/app/app.component.html
+++ b/client/project/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p-menubar [model]="items">
+<p-menubar [model]="items" id="applicationMenubar">
   <ng-template pTemplate="start" class="mx-2">
     <p-avatar
       image="/assets/images/puzzle.png"
