--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -227,7 +227,7 @@
                   Purchased Date <p-sortIcon field="date"></p-sortIcon>
                 </th>
                 <th style="width: 12%" pSortableColumn="quantity">
-                  Quantity <p-sortIcon field="percentage"></p-sortIcon>
+                  Quantity <p-sortIcon field="quantity"></p-sortIcon>
                 </th>
                 <th style="width: 12.5%">Bought Price</th>
                 <th style="width: 12.5%">Market Price</th>
