--- a/client/project/src/app/component/savings/savings.component.css
+++ b/client/project/src/app/component/savings/savings.component.css
@@ -7,3 +7,43 @@
 .export-buttons {
   margin-right: 1rem;
 }
+
+.h1card {
+  /* background: var(--surface-card); */
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  background: rgba(255, 255, 255, 0.13);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  font-family: "Press Start 2P", cursive;
+  /* border: 1px solid rgba(255, 255, 255, 0.31);
+    border-radius: 16px; */
+}
+
+dialog {
+  background-color: rgba(32, 82, 221, 0.8);
+  color: white;
+  border-color: transparent;
+  overflow: hidden;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 0 20px 8px #020202;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#year {
+  color: navy;
+}
+
+#year:hover {
+  cursor: pointer;
+}
+
+.dialogBtn:hover {
+  transform: scale(1.1);
+}
