--- a/client/project/src/app/app.component.html
+++ b/client/project/src/app/app.component.html
@@ -1,7 +1,7 @@
-<p-menubar [model]="items" id="applicationMenubar">
+<p-menubar *ngIf="isLogin()" [model]="items" id="applicationMenubar">
   <ng-template pTemplate="start" class="mx-2">
     <p-avatar
-      image="/assets/images/puzzle.png"
+      [image]="imgSrc"
       styleClass="mr-2"
       size="large"
       shape="circle"
@@ -17,6 +17,38 @@
 
   <ng-template pTemplate="end">
     <input type="text" pInputText placeholder="Search" class="w-full" />
+    <p-button
+      icon="pi pi-power-off"
+      label="Logout"
+      styleClass=" p-button-text p-button-danger"
+      (onClick)="logout()"
+    ></p-button>
+  </ng-template>
+</p-menubar>
+
+<p-menubar *ngIf="!isLogin()" [model]="items" id="applicationMenubar">
+  <ng-template pTemplate="start" class="mx-2">
+    <div class="application-name fs-2">
+      <p>AMG</p>
+    </div>
+  </ng-template>
+  <ng-template #menuItemTempalte let-item>
+    <a *ngIf="!item.routerLink" [href]="item.url" [target]="item.target">
+      <i class="{{ item.icon }}"></i>
+      <span>{{ item.label }}</span>
+    </a>
+  </ng-template>
+
+  <ng-template pTemplate="end">
+    <p-button styleClass=" p-button-text">
+      <fa-icon [icon]="loginIcon" animation="bounce"></fa-icon>
+      <span class="ms-2 fw-bolder">Login </span>
+    </p-button>
+    <p-button
+      icon="pi pi-user"
+      label="Sign Up"
+      styleClass=" p-button-text p-button-secondary"
+    ></p-button>
   </ng-template>
 </p-menubar>
 
