--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-center align-items-center">
     <div class="col-8 text-center my-5 h1card">
-      <h1>Investment Dashbooard</h1>
+      <h1>Portfolio Dashbooard</h1>
     </div>
 
     <p-tabView>
@@ -18,7 +18,7 @@
         >
           <div class="col-10 d-flex justify-content-center h3-font">
             <h2>
-              Total Stock Value :
+              Total Portfolio Value :
               <span id="unrealized-market-value">
                 {{ totalStockMarketValue | currency : "USD" : "code" }}
               </span>
