--- a/client/project/src/app/component/transaction-records/transaction-records.component.css
+++ b/client/project/src/app/component/transaction-records/transaction-records.component.css
@@ -19,18 +19,18 @@
   -webkit-backdrop-filter: blur(5px);
   font-family: "Press Start 2P", cursive;
   /* border: 1px solid rgba(255, 255, 255, 0.31);
-    border-radius: 16px; */
+      border-radius: 16px; */
 }
 
 /* dialog {
-  background-color: rgba(32, 82, 221, 0.8);
-  color: white;
-  border-color: transparent;
-  overflow: hidden;
-  border-radius: 5px;
-  cursor: pointer;
-  box-shadow: 0 0 20px 8px #020202;
-} */
+    background-color: rgba(32, 82, 221, 0.8);
+    color: white;
+    border-color: transparent;
+    overflow: hidden;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 20px 8px #020202;
+  } */
 
 dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.5);
@@ -50,6 +50,7 @@ dialog::backdrop {
 }
 
 #dialogSubmitButton {
+  /* background-color: var(--primary-color); */
   background-color: green;
   border: none;
   color: white;
@@ -71,16 +72,17 @@ dialog::backdrop {
   box-shadow: 2px 4px #888888;
 }
 
-#addTransaction:hover {
-  cursor: pointer;
-}
-
-#year {
+#dates {
   color: green;
   box-shadow: 5px 10px #888888;
+  font-family: "Righteous", cursive;
 }
 
-#year:hover {
+.record-summary {
+  font-family: "Righteous", cursive;
+}
+
+#dates:hover {
   cursor: pointer;
 }
 
