--- a/client/project/src/app/component/dashboard/dashboard.component.css
+++ b/client/project/src/app/component/dashboard/dashboard.component.css
@@ -3,6 +3,10 @@
   font-size: smaller;
 }
 
+h1 {
+  font-family: "Press Start 2P", cursive;
+}
+
 h3 {
   font-family: "Righteous", cursive;
 }
@@ -13,15 +17,20 @@ h3 {
   border-radius: 6px;
 }
 
-.dashboardcard {
-  background: var(--surface-card);
+.donutbackground,
+.linebackground {
+  background: var(--surface-overlay);
   padding: 1rem;
   border-radius: 10px;
   margin-bottom: 1rem;
-  /* background: rgba(255, 255, 255, 0.13); */
-  /* box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px); */
-  /* border: 1px solid rgba(255, 255, 255, 0.31);
-  border-radius: 16px; */
 }
+
+/* .card {
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  background: rgba(255, 255, 255, 0.13);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+} */
