--- a/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
+++ b/client/project/src/app/component/investment-dashboard/investment-dashboard.component.css
@@ -6,19 +6,6 @@ h1 {
   font-family: "Righteous", cursive;
 }
 
-.h1card {
-  /* background: var(--surface-card); */
-  padding: 2rem;
-  border-radius: 10px;
-  margin-bottom: 1rem;
-  background: rgba(255, 255, 255, 0.13);
-  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  /* border: 1px solid rgba(255, 255, 255, 0.31);
-    border-radius: 16px; */
-}
-
 .chartcard {
   /* background: var(--surface-card); */
   padding: 1rem;
@@ -32,6 +19,14 @@ h1 {
   border-radius: 16px; */
 }
 
+.donutbackground,
+.linebackground {
+  background: var(--surface-overlay);
+  padding: 1rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+
 td,
 th {
   text-align: center !important;
@@ -39,9 +34,8 @@ th {
 
 .stock-card {
   background: var(--surface-card);
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 10px;
-  margin-bottom: 1rem;
 }
 
 #dummy-unrealized-profit,
