--- a/client/project/src/app/component/login/login.component.css
+++ b/client/project/src/app/component/login/login.component.css
@@ -1,4 +1,14 @@
-.container {
+.login {
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  margin-top: 2rem;
+  max-width: auto;
+  background: rgba(255, 255, 255, 0.13);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+}
+
+.product-description {
   padding: 2rem;
   border-radius: 10px;
   margin-bottom: 1rem;
@@ -10,4 +20,77 @@
 
 h2 {
   font-family: "Righteous", cursive;
+}
+
+/* SCROLL UP BUTTON */
+#scrollUpBtn {
+  position: fixed;
+  bottom: 15rem;
+  right: 3rem;
+  z-index: 99;
+  cursor: pointer;
+}
+
+/* FOOTER */
+footer {
+  position: sticky;
+  /* position: fixed; */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer {
+  background: #000;
+  padding: 5px 0px;
+  font-family: "Play", sans-serif;
+  text-align: center;
+}
+
+.footer .row {
+  width: 100%;
+  /* margin: 0.2% 0%; */
+  padding: 0.6% 0%;
+  color: gray;
+  font-size: 0.8em;
+}
+
+.footer .row a {
+  text-decoration: none;
+  color: gray;
+  transition: 0.5s;
+  margin-right: 2rem;
+}
+
+.footer .row a:hover {
+  color: #fff;
+}
+
+.footer .row ul {
+  width: 100%;
+}
+
+.footer .row ul li {
+  display: inline-block;
+  margin: 0px 30px;
+}
+
+.footer .row a fa-icon {
+  font-size: 1.5rem;
+  margin: 0% 1%;
+}
+
+@media (max-width: 720px) {
+  .footer {
+    text-align: left;
+    padding: 5%;
+  }
+  .footer .row ul li {
+    display: block;
+    margin: 10px 0px;
+    text-align: left;
+  }
+  .footer .row a fa-icon {
+    margin: 0% 3%;
+  }
 }
