--- a/client/project/src/app/component/login/login.component.html
+++ b/client/project/src/app/component/login/login.component.html
@@ -1,51 +1,123 @@
 <div class="container">
-  <div class="row justify-content-center m-3">
-    <div class="col-4 text-center">
-      <img [src]="imgSrc" [className]="imgClass" alt="" srcset="" />
-    </div>
-    <div class="row justify-content-center m-2">
-      <div class="col-6 text-center">
-        <h2>{{ loginTitle }}</h2>
-      </div>
-    </div>
+  <section class="login">
     <div class="row justify-content-center m-3">
       <div class="col-4 text-center">
-        <form [formGroup]="form" (submit)="login()">
-          <div class="p-inputgroup">
+        <img [src]="imgSrc" [className]="imgClass" alt="" srcset="" />
+      </div>
+      <div class="row justify-content-center m-2">
+        <div class="col-6 text-center">
+          <h2>{{ loginTitle }}</h2>
+        </div>
+      </div>
+      <div class="row justify-content-center m-3">
+        <div class="col-4 text-center">
+          <form [formGroup]="form" (submit)="login()">
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon">
+                <i class="pi pi-user"></i>
+              </span>
+              <input
+                pInputText
+                placeholder="Username"
+                formControlName="username"
+                (click)="resetLoginPage()"
+              />
+            </div>
+            <!-- <div class="p-inputgroup">
             <span class="p-inputgroup-addon">
               <i class="pi pi-user"></i>
             </span>
-            <input
-              pInputText
-              placeholder="Username"
-              formControlName="username"
-              (click)="resetLoginPage()"
-            />
-          </div>
-          <!-- <div class="p-inputgroup">
-          <span class="p-inputgroup-addon">
-            <i class="pi pi-user"></i>
-          </span>
-        </div> -->
-          <p-password
-            id="pwd"
-            formControlName="password"
-            placeholder="Password"
-            [toggleMask]="true"
-          ></p-password>
+          </div> -->
+            <p-password
+              id="pwd"
+              formControlName="password"
+              placeholder="Password"
+              [toggleMask]="true"
+            ></p-password>
 
-          <button
-            class="mt-3 ms-3"
-            type="submit"
-            pButton
-            [disabled]="form.invalid"
-          >
-            Login
-          </button>
-        </form>
+            <button
+              class="mt-3 ms-3"
+              type="submit"
+              pButton
+              [disabled]="form.invalid"
+            >
+              Login
+            </button>
+          </form>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+  <section class="product-description">
+    <div class="row justify-content-center align-items-center my-3">
+      <div
+        class="col-10 d-flex justify-content-center align-items-center"
+        [style]="{ height: '50dvh' }"
+      >
+        <div class="d-flex flex-column align-items-center">
+          <div>
+            <h3>
+              Product Description Here
+              <fa-icon [icon]="chartIcon" animation="spin-pulse"></fa-icon>
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="product-description">
+    <div class="row justify-content-center align-items-center my-3">
+      <div
+        class="col-10 d-flex justify-content-center align-items-center"
+        [style]="{ height: '50dvh' }"
+      >
+        <div class="d-flex flex-column align-items-center">
+          <div>
+            <h3>
+              Product Description Here
+              <fa-icon [icon]="chartIcon" animation="spin-pulse"></fa-icon>
+            </h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <button
+    id="scrollUpBtn"
+    *ngIf="displayButton"
+    (click)="topFunction()"
+    pButton
+    pRipple
+    class="p-button-success"
+  >
+    <fa-icon [icon]="pointUpIcon"></fa-icon>
+  </button>
   <p-toast></p-toast>
 </div>
+<footer>
+  <div class="footer">
+    <div class="row">
+      <div class="d-flex justify-content-center align-items-center">
+        <a href="#"><fa-icon [icon]="facebookIcon"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="instaIcon"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="youtubeIcon"></fa-icon></a>
+        <a href="#"><fa-icon [icon]="twitterIcon"></fa-icon></a>
+      </div>
+    </div>
+
+    <div class="row">
+      <ul>
+        <li><a href="#">Contact us</a></li>
+        <li><a href="#">Our Services</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Career</a></li>
+      </ul>
+    </div>
+
+    <div class="row ps-3">
+      AMG Copyright © 2023 TFIP - All rights reserved || Designed By: David
+    </div>
+  </div>
+</footer>
