--- a/client/project/src/app/component/transaction-records/transaction-records.component.css
+++ b/client/project/src/app/component/transaction-records/transaction-records.component.css
@@ -8,18 +8,12 @@
   margin-right: 1rem;
 }
 
-.h1card {
-  /* background: var(--surface-card); */
-  padding: 2rem;
+.donutbackground,
+.linebackground {
+  background: var(--surface-overlay);
+  padding: 1rem;
   border-radius: 10px;
   margin-bottom: 1rem;
-  background: rgba(255, 255, 255, 0.13);
-  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  font-family: "Press Start 2P", cursive;
-  /* border: 1px solid rgba(255, 255, 255, 0.31);
-      border-radius: 16px; */
 }
 
 /* dialog {
@@ -33,7 +27,7 @@
   } */
 
 dialog::backdrop {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(112, 111, 111, 0.5);
 }
 
 #dialogModal {
