--- a/client/project/src/styles.css
+++ b/client/project/src/styles.css
@@ -11,18 +11,29 @@ body {
   font-family: var(--font-family);
   /* background-image: linear-gradient(to bottom right, rgb(33, 124, 151), black);
   background-size: 400% 400%; */
-  background: rgb(238, 232, 174);
-  background: linear-gradient(
-    90deg,
-    rgba(238, 232, 174, 1) 0%,
-    rgba(148, 154, 233, 1) 100%
-  );
+  /* background: #f5f3fb; */
+  background: var(--highlight-bg);
   /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite; */
   height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.h1card {
+  /* background: var(--surface-card); */
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+  background: rgba(161, 79, 79, 0.13);
+  box-shadow: 0 4px 30px rgba(10, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  font-family: "Press Start 2P", cursive;
+  color: var(--text-color);
+  /* border: 1px solid rgba(255, 255, 255, 0.31);
+    border-radius: 16px; */
 }
 
 .positive {
